# fast-zero

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  tasks.py  users.py
migrations/: env.py
migrations/versions/: 278393e56b2c_create_users_table.py  bb8fdb1bb2a8_created_at_and_updated_at_fields_in_.py  e3a46aff14a3_create_todos_table.py
src/fast_zero/: app.py  database.py  models.py  schemas.py  security.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_users.py
